@@ -219,6 +219,7 @@ Chronological list of authors
   - Daniel J. Evans
   - Mohit Kumar
   - Shubham Kumar
+  - Zaheer Timol
 
 External code
 -------------
