@@ -52,6 +52,8 @@ class TopologyObject(object):
        via the ``is_guessed`` managed property.
     .. versionadded:: 0.11.0
        Added the `value` method to return the size of the object
+    .. versionchanged:: 2.6.0
+       Updated Atom ID representation order to match that of AtomGroup indices
     """
     __slots__ = ("_ix", "_u", "btype", "_bondtype", "_guessed", "order")
 
@@ -116,13 +118,12 @@ class TopologyObject(object):
         return hash((self._u, tuple(self.indices)))
 
     def __repr__(self):
-        indices = (self.indices if self.indices[0] < self.indices[-1]
-                   else self.indices[::-1])
+        """Return representation in same order of AtomGroup indices"""
         return "<{cname} between: {conts}>".format(
             cname=self.__class__.__name__,
             conts=", ".join([
                 "Atom {0}".format(i)
-                for i in indices]))
+                for i in self.indices]))
 
     def __contains__(self, other):
         """Check whether an atom is in this :class:`TopologyObject`"""
